--- a/index.html
+++ b/index.html
@@ -7,15 +7,32 @@
   </head>
 
   <body>
+    <style>
+      @media only screen and (max-width:350px){
+    body{
+        background-color: blue;
+        color:red;
+    }
+}
+#navbar{
+  position: fixed;
+  top: 0px;
+}
+    </style>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <div id="welcome-section">
       <h1>Hey We are the team TIN & MARWAN</h1>
-      <div id="projects">
-        <div class="project-tile"></div>
-        <a href="" target="_blank">This is a link</a>
-      </div>
+     
     </div>
+    <div id="projects">
+      <div class="project-tile"></div>
+      <a href="" target="_blank">This is a link</a>
+    </div>
+    <nav id="navbar">
+      <a href="#projects" target="#projects">Projects</a>
+    </nav>
+     <a id="profile-link" href="https://github.com/Nawkoch/tin-marouane.git" target="_blank">Github</a>
     
     <script  src="js/index.js"></script>
   </body>
